--- a/device/main/CMakeLists.txt
+++ b/device/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "wifi_connect.c" "main.cpp"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "main.cpp" "WebInterface.cpp"
+    INCLUDE_DIRS ".")
