--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "device/components/esp-idf-rc522"]
 	path = device/components/esp-idf-rc522
-	url = https://github.com/abobija/esp-idf-rc522.git
+	url = git@github.com:sweidac/esp-idf-rc522.git
